# shot

./: .bumpversion.cfg  LICENSE  README.md  dev.md  pyproject.toml  shot.py
.githooks/: install.py  pre-commit
.github/workflows/: ci.yml  release.yml
tests/: test_shot.py
tests/fixtures/src/: foo.txt
tests/integration/: test_shot_integation.py
tests/unit/: test_shot.py
