[tool.poetry]
name = "shot"
version = "0.1.1"
description = "A CLI for managing screenshots on OSX"
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ConorSheehan1/shot"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

# would be nice to sort these https://github.com/python-poetry/poetry/issues/312
[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.3.1"
termcolor = "^1.1.0"

# should be dev-extras https://github.com/python-poetry/poetry/issues/1644
# can't have dev optionals https://github.com/python-poetry/poetry/pull/606
[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
bump2version = "*"
isort = { version = "*", extras = ["poetry"] }
mypy = "^0.780"
pytest = "*"
taskipy = "*"

# https://github.com/python-poetry/poetry/issues/241
# dev scripts
[tool.taskipy.tasks]
bumpversion = "bumpversion"
ci_lint = "black --check ."
ci_isort = "isort --check --diff ."
dev = "python shot.py"
isort = 'isort .'
lint = "black ."
mypy = "mypy --ignore-missing-imports shot.py"
tests = "python -m pytest tests"

# linter configs
[tool.isort]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third party"
# copied from https://github.com/psf/black/blob/master/docs/compatible_configs.md
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line_length = 100

# cli entrypoint
[tool.poetry.scripts]
shot = "shot:shot"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

