[tool.poetry]
name = "shot"
version = "2.0.2"
description = "A CLI for managing screenshots on OSX"
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ConorSheehan1/shot"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

# should be dev-extras https://github.com/python-poetry/poetry/issues/1644
# can't have dev optionals https://github.com/python-poetry/poetry/pull/606
# would be nice to sort dependencies https://github.com/python-poetry/poetry/issues/312
[tool.poetry.dependencies]
python = "^3.7.2"
fire = "^0.3.1"
rich = "^9.12.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bump2version = "*"
isort = { version = "*", extras = ["poetry"] }
mypy = "^0.780"
pytest = "*"
taskipy = "*"
pytest-random-order = "^1.0.4"

# https://github.com/python-poetry/poetry/issues/241
# dev scripts
[tool.taskipy.tasks]
bumpversion = "bumpversion"
ci_lint = "black --check ."
ci_isort = "isort --check --diff ."
dev = "python shot.py"
isort = 'isort .'
lint = "black ."
mypy = "mypy --ignore-missing-imports shot.py"
tests = "python -m pytest --random-order tests"
unit_tests = "python -m pytest --random-order tests/unit"
integration_tests = "python -m pytest --random-order tests/integration"
install_hooks = "python .githooks/install.py"

# linter configs
[tool.isort]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third party"
# copied from https://github.com/psf/black/blob/master/docs/compatible_configs.md
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line_length = 100

# cli entrypoint
[tool.poetry.scripts]
shot = "shot:main"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.core.masonry.api"

